# krakenpy

./: .gitignore  CONTRIBUTING.md  README.md  example.py  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: publish.yml
krakenpy/: __init__.py  exceptions.py  payloads.py  response.py  service.py  utils.py
tests/krakenpy/: test_service.py
